Added restart button Restart game and clears results

--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
 
 #buttons-container {
     display: flex;
+    justify-content: space-around;
+}
+#playerButtons {
+    display: flex;
     justify-content: center;
 }
 #results {
