--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+    background-color: azure;
+}
+button {
+    font-size: 20px;
+}
 #heading {
     display:flex;
     justify-content: center;
@@ -6,11 +12,19 @@
 #buttons-container {
     display: flex;
     justify-content: space-around;
+    
 }
-#playerButtons {
+#player-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    
+}
+.playerButtons {
+    
+    margin-top: 50px;
+    padding: 10px;
 }
 #results {
     text-align: center;
+    font-size: 20px;
 }
